# HaskMate

./: .gitignore  HaskMate.cabal  README.md
app/: BenchMain.hs  Main.hs  PerftMain.hs  Phase2Test.hs
src/: Board.hs  GameState.hs  Move.hs  Piece.hs  Position.hs
src/AI/: Evaluation.hs  Heuristics.hs  Minimax.hs  PST.hs  Perft.hs  Search.hs  SearchStats.hs
src/AI/Heuristics/: King.hs  Material.hs  Pawn.hs  Positional.hs
src/AI/Search/: Common.hs  MinimaxPlain.hs  MinimaxPlainStats.hs  Negamax.hs  NegamaxStats.hs  Ordering.hs  Quiescence.hs  SearchConfig.hs  Timed.hs  TimedState.hs
src/Board/: Board.hs  Core.hs  Query.hs
src/GameState/: FEN.hs  MoveGen.hs  StateUpdate.hs  Types.hs  Validation.hs
src/UI/: Assets.hs  Controller.hs  Coordinates.hs  Message.hs  Renderer.hs  Types.hs
test/: Spec.hs
