cabal-version:   3.8
name:            HaskMate
version:         0.1.0.0
license:         NONE
author:          mharrymh
maintainer:      149264867+mharrymh@users.noreply.github.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Piece
                    , Board.Core
                    , Board.Query
                    , GameState
                    , Move
                    , Position
                    , UI.Coordinates
                    , UI.Controller
                    , UI.Message
                    , UI.Renderer
                    , UI.Types
    other-modules:    GameState.Types
                    , GameState.Validation
                    , GameState.MoveGen
                    , GameState.StateUpdate
    build-depends:    base >=4.17 && <4.18
                    , gloss >=1.13
                    , containers >=0.6
    hs-source-dirs:   src
    default-language: Haskell2010

executable HaskMate
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <4.18
                    , HaskMate
                    , gloss >=1.13
                    , containers >=0.6
    hs-source-dirs:   app
    default-language: Haskell2010
