cabal-version:   3.8
name:            HaskMate
version:         0.1.0.0
license:         NONE
author:          mharrymh
maintainer:      149264867+mharrymh@users.noreply.github.com
build-type:      Simple
extra-doc-files: README.md
data-files:      assets/*.png

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Piece
                    , Board.Core
                    , Board.Query
                    , GameState
                    , Move
                    , Position
                    , UI.Assets
                    , UI.Coordinates
                    , UI.Controller
                    , UI.Message
                    , UI.Renderer
                    , UI.Types
                    , AI.Search
                    , AI.Evaluation
                    , AI.Perft
                    , AI.SearchStats
                    , AI.Heuristics.Material
                    , AI.Heuristics.Positional
                    , AI.Heuristics.Pawn
                    , AI.Heuristics.King
                    , GameState.FEN
                    , GameState.Types
                    , GameState.Validation
                    , GameState.MoveGen
                    , GameState.StateUpdate
    other-modules:    Paths_HaskMate
    build-depends:    base >=4.17 && <4.19
                    , gloss >=1.13
                    , gloss-juicy >=0.2
                    , JuicyPixels >=3.3
                    , containers >=0.6
                    , mtl >=2.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable HaskMate
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <4.19
                    , HaskMate
                    , gloss >=1.13
                    , containers >=0.6
                    , mtl >=2.3
    hs-source-dirs:   app
    default-language: Haskell2010

executable HaskMate-perft
    import:           warnings
    main-is:          PerftMain.hs
    build-depends:    base >=4.17 && <4.19
                    , HaskMate
                    , mtl >=2.3
    hs-source-dirs:   app
    default-language: Haskell2010

executable HaskMate-bench
    import:           warnings
    main-is:          BenchMain.hs
    build-depends:    base >=4.17 && <4.19
                    , HaskMate
                    , mtl >=2.3
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite HaskMate-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base >=4.17 && <4.19
                    , HaskMate
                    , hspec >=2.11
                    , mtl >=2.3
    hs-source-dirs:   test
    default-language: Haskell2010
